--- a/entrar.html
+++ b/entrar.html
@@ -124,7 +124,7 @@
                         <div class="upcoming_gaming_text">
 						<h3>Entre com seu login</h3>
 						<br>
-                            <form id="enter-form" action="http://localhost:8080/account/logar" onsubmit="$('#imgLoad').show();$('.form-Messages').text('')">
+                            <form id="enter-form" action="http://192.168.42.223:8080/account/logar" onsubmit="$('#imgLoad').show();$('.form-Messages').text('')">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form_input">
