updated chars function

--- a/perfil.html
+++ b/perfil.html
@@ -129,14 +129,14 @@
                                     <div><i class="icofont-money-bag">R$75,00 </i><a style="font-size:11px;top: -2px;position: relative;"> Depositar - Sacar </a></div> 
                                     <br>
                                     <hr>
-                                    <a href="#do" onclick="$('#addLogin-form').show();"><i class="icofont-plus-circle"> Criar Conta</i></a>
+                                    <a href="#do" onclick="$('#addLogin-form').show();"><i class="icofont-plus-circle"> Criar login</i></a>
                                     <hr>
                                 </br>
 
                                     <div class="table-responsive custom-table-responsive">
 
                                         <table class="table custom-table">
-                                            <caption>Accounts: 2/2 &nbsp;&nbsp;</caption>
+                                            <!-- <caption>Accounts: 2/2 &nbsp;&nbsp;</caption> -->
                                             
                                           <thead>
                                             <tr>  
