atualizações e implementação da pagina myperfil

--- a/registro.html
+++ b/registro.html
@@ -159,6 +159,7 @@
                                 <button type="submit" class="btn btn-link">Registrar<img src="assets/img/icon/arrrow-icon.webp" alt=""></button>
                             </div>
                             <p class="form-Messages"></p>
+                            <img id="imgLoad" src="assets/img/others/imagens-e-gifs-de-loading-13.gif" alt="Loading" style="display: none;" >
                         </form>
                     </div>
                 </div>
